# ml_ops_02476

./: .gitignore  404.html  README.md  cloudbuild.yaml  data.dvc  index.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: codecheck.yaml  deploy_docs.yaml  tests.yaml
app/: backend_api.py  backend_requirements.txt  frontend.py  frontend_requirements.txt
cloud_test/: cloud_test.dockerfile
configs/: sweep.yaml
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile  train_gcloud.dockerfile
docs/: mkdocs.yaml
docs/source/: my_api.md
ml_ops_02476/: tasks.py
ml_ops_02476/dockerfiles/: api.dockerfile  train.dockerfile
ml_ops_02476/docs/: mkdocs.yaml
ml_ops_02476/docs/source/: index.md
ml_ops_02476/tests/: test_data.py
models/: model.pth
my_api/: index.html
reports/: README.md  report.py
reports/profiling/: profile.prof  read_profile.py
search/: search_index.json
src/quick_draw/: backend_api.py  data.py  data_download.py  data_test.py  evaluate.py  make_viz.py  model.py  model_test.py  train.py  train_cli.py  train_wandb.py  visualize.py
src/utils/: data_robust_test.py  logger.py
tests/: load_test_api.py  locustfile.py  test_api.py  test_data.py  test_model.py
