[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quick_draw"
version = "0.0.1"
description = "This project aims to implement computer vision to classify drawings from \"Quick, Draw!\""
authors = [
  { name = "Christiansen, Eriksen, Hyllinge, Mondrup, Schmidt", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[project.scripts]
train = "quick_draw.train:main"
evaluate = "quick_draw.evaluate:evaluate"

[tool.coverage.run]
omit = ["tests/*"]
